@@ -53,7 +53,7 @@ ASM_NAME(maxmin_s16):
 	.long   -956301312
 	.long   -956301312
 	.text
-	ALIGN16,,15
+	ALIGN16
 .globl ASM_NAME(synth_1to1_x86_64_accurate_asm)
 ASM_NAME(synth_1to1_x86_64_accurate_asm):
 #ifdef _WIN64 /* should save xmm6-15 */
