@@ -60,7 +60,7 @@ ASM_NAME(maxmin_s32):
 	.long   -956301312
 	.long   -956301312
 	.text
-	ALIGN16,,15
+	ALIGN16
 .globl ASM_NAME(synth_1to1_s32_x86_64_asm)
 ASM_NAME(synth_1to1_s32_x86_64_asm):
 #ifdef _WIN64 /* should save xmm6-15 */
